might have fixed big gap at bottom of page

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ header {
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   grid-gap: 20px;
   margin: 44px 40px;
   grid-auto-rows: 1fr;
